force-app/main/default/objects/Service_Appointment_Config__mdt/Service_Appointment_Config__mdt.object-meta.xml
<CustomObject>
    <label>Service Appointment Config Detail</label>
    <pluralLabel>Service Appointment Config Details</pluralLabel>
</CustomObject>