force-app/main/default/objects/Service_Appointment_Config__mdt/fields/maxDistance__c.field-meta.xml
<CustomField>
    <fullName>maxDistance__c</fullName>
    <defaultValue>50</defaultValue>
    <label>maxDistance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>