force-app/main/default/objects/Service_Appointment_Config__mdt/fields/MaxDriveTime__c.field-meta.xml
<CustomField>
    <fullName>MaxDriveTime__c</fullName>
    <defaultValue>60</defaultValue>
    <label>Max Drive Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>