force-app/main/default/objects/Service_Appointment_Config__mdt/fields/maxSlotsPerDay__c.field-meta.xml
<CustomField>
    <fullName>maxSlotsPerDay__c</fullName>
    <label>maxSlotsPerDay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>