force-app/main/default/objects/Service_Appointment_Config__mdt/fields/MaxWeeksAhead__c.field-meta.xml
<CustomField>
    <fullName>MaxWeeksAhead__c</fullName>
    <defaultValue>3</defaultValue>
    <label>Max Weeks Ahead</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>